fix: swastika size on mobile

--- a/css/style.css
+++ b/css/style.css
@@ -648,6 +648,13 @@ a {
     }
 }
 
+@media only screen and (max-width: 1000px) {
+    .wedsSwastika {
+        width: 15%;
+        height: 15%;
+    }
+}
+
 @media only screen and (max-width: 400px) {
     .video-container {
         overflow: hidden;
